my first worflow

--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -1,1 +1,13 @@
+name: First workflow
+on:push
+    
+    jobs:
+  say-hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Say Hello
+        run: echo "Hello, neha creating forst workflow"
+        
+        
 
+  
